--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "test",
-  "version": "0.1.0",
+  "name": "omniyrz",
+  "version": "2.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 10000",
