--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-icons": "^5.3.0",
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-window": "^1.8.10",
+    "recharts": "^2.15.1",
     "sharp": "latest",
     "sonner": "^1.7.0",
     "swr": "^2.2.5",
