--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.59.19",
+    "@tanstack/react-virtual": "^3.13.6",
     "antd": "^5.22.3",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -51,7 +54,6 @@
     "lucide-react": "^0.451.0",
     "luxon": "^3.5.0",
     "next": "14.2.15",
-    "next-auth": "^4.24.10",
     "next-themes": "^0.3.0",
     "nstbrowser-sdk-node": "^0.0.8",
     "pdf-lib": "^1.17.1",
@@ -59,8 +61,9 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-virtualized-auto-sizer": "^1.0.24",
-    "react-window": "^1.8.10",
+    "react-virtualized-auto-sizer": "^1.0.26",
+    "react-window": "^1.8.11",
+    "react-window-infinite-loader": "^1.0.10",
     "recharts": "^2.15.1",
     "sharp": "latest",
     "sonner": "^1.7.0",
