--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.14",
     "@types/json-stable-stringify": "^1.0.36",
+    "@types/lodash": "^4.17.16",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20",
     "@types/react": "^18",
