--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-virtualized-auto-sizer": "^1.0.26",
+    "react-virtuoso": "^4.12.6",
     "react-window": "^1.8.11",
     "react-window-infinite-loader": "^1.0.10",
     "recharts": "^2.15.1",
